<resources>
    <string name="app_name" translatable="false">Talk To Me</string>
    <string name="log_out">Logout</string>
    <string name="change_setting">Setting</string>
    <string name="all_user">All User</string>
    <string name="email_hint" translatable="false">Enter Your Email</string>
    <string name="password_hint" translatable="false">Enter Your Password</string>
    <string name="name_hint" translatable="false">Enter Your Name</string>


    <string name="dialog_action_ok" translatable="false">Ok</string>
    <string name="dialog_action_cancel" translatable="false">Cancel</string>
    <string name="dialog_titile_internet"> NO INTERNET</string>
    <string name="dialog_message_internet">Please Check Your Internet Connection.</string>
    <string name="dialog_action_internet">Enable INTERNET</string>

    <string name="send_request">Send Friend Request</string>
    <string name="cancle_request">Cancel Friend Request</string>
    <string name="unfrined">UnFriend User</string>
    <string name="accept_request">Accept Friend Request</string>
    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="bt_login">Login</string>
    <string name="bt_create_new_account">Create New Account</string>
    <string name="et_enter_message">Enter Message...</string>
    <string name="bt_decline_friend_request">Decline Friend Request</string>
    <string name="tv_list_seen">List seen</string>
    <string name="bt_accept">Accept</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_register_now">Register Now</string>
    <string name="bt_change_image">Change Image</string>
    <string name="bt_change_state">Change State</string>

    //custom list seen class string
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="empty_widget_text">No data</string>

</resources>
